--- a/src/ch3/CMakeLists.txt
+++ b/src/ch3/CMakeLists.txt
@@ -11,6 +11,11 @@ target_link_libraries(run_eskf_gins
         glog gflags ${PROJECT_NAME}.common ${PROJECT_NAME}.ch3
         )
 
+add_executable(run_eskf_mocap run_eskf_mocap.cc)
+target_link_libraries(run_eskf_mocap
+        glog gflags ${PROJECT_NAME}.common ${PROJECT_NAME}.ch3
+        )
+
 add_executable(process_gnss process_gnss.cc)
 target_link_libraries(process_gnss
         glog gflags ${PROJECT_NAME}.common ${PROJECT_NAME}.ch3
