finish learning & add sim imu integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,9 @@
         "stack": "cpp",
         "core": "cpp",
         "numericaldiff": "cpp",
-        "specialfunctions": "cpp"
+        "specialfunctions": "cpp",
+        "locale": "cpp",
+        "any": "cpp",
+        "variant": "cpp"
     }
 }
