finish implementing iekf, need to check correctness

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,7 @@
         "__debug": "cpp",
         "__functional_base": "cpp",
         "__locale": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "__bit_reference": "cpp"
     }
 }
