--- a/src/ch3/CMakeLists.txt
+++ b/src/ch3/CMakeLists.txt
@@ -6,13 +6,13 @@
 #         glog gflags ${PROJECT_NAME}.common ${PROJECT_NAME}.ch3
 #         )
 
-# add_executable(run_imu_integration_sim
-#         run_imu_integration_sim.cc
-#         )
+add_executable(run_imu_integration_sim
+        run_imu_integration_sim.cc
+        )
 
-# target_link_libraries(run_imu_integration_sim
-#         glog gflags ${PROJECT_NAME}.common ${PROJECT_NAME}.ch3
-#         )
+target_link_libraries(run_imu_integration_sim
+        glog gflags ${PROJECT_NAME}.common ${PROJECT_NAME}.ch3
+        )
 
 # add_executable(run_eskf_gins run_eskf_gins.cc)
 # target_link_libraries(run_eskf_gins
