--- a/src/ch6/CMakeLists.txt
+++ b/src/ch6/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(${PROJECT_NAME}.ch6
 target_link_libraries(${PROJECT_NAME}.ch6
         ${PCL_LIBRARIES}
         ${PROJECT_NAME}.common
+        "/usr/lib/x86_64-linux-gnu/libcholmod.so"
         )
 
 add_executable(test_2dlidar_io
